Correct text-align for confirmation text

--- a/css/style.css
+++ b/css/style.css
@@ -338,6 +338,7 @@ main {
   display: flex;
   justify-content: center;
   align-items: center;
+  text-align: center;
   font-size: 36px;
 }
 .confirmation-btn {
